Change Jenkinsfile to use Java 21 (#333)
* Change Jenkinsfile to use Java 21